--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
   overflow: hidden; /* Hide scrollbars */
 }
 .home{
-  background-color: rgb(167, 214, 255);
+  background-color: rgba(13, 16, 73, 0.568);
   display: flex;
   height: 80%;
   flex-direction: column;
@@ -37,6 +37,7 @@ body {
 
 .main-header{
   font-size: 2rem;
+  color: white;
 }
 /* for home btn */
 .btn{
@@ -49,7 +50,7 @@ body {
   align-items: center;
   font-size: 1.76rem;
   color: aliceblue;
-  background-color: rgb(118, 66, 239);
+  background-color: rgba(113, 53, 255, 0.995);
   border-radius: 25px;
 }
 
@@ -60,18 +61,27 @@ body {
   align-items: center;
   flex: 12;
 }
-
+.app{
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background-image: url('./assets/qrback.png');
+}
 
 /* footer */
 .footer {
   margin: 0 0 0 0;
   /* height: 30px; */
-  background-color: rgb(63, 94, 101);
+  background-color: rgba(5, 36, 36, 0.881);
   display: flex;
   color: rgb(197, 196, 196);
   justify-content: center;
   align-items: center;
-  flex: 1;
+  flex: 1.5;
+  border-top-left-radius:20px ;
+  border-top-right-radius:20px ;
+
+
 }
 
 
