--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,33 @@ body {
   align-items: center;
 }
 
+/* generator and scanner */
+
+.btn.generator a{
+  color: white;
+}
+.btn.scanner a{
+  color: white;
+}
+
+/* pages */
+.contact-main{
+  background-color: rgba(13, 16, 73, 0.568);
+  display: flex;
+  height: 80%;
+  flex-direction: column;
+  align-items: center;
+}
+.about-main{
+  background-color: rgba(13, 16, 73, 0.568);
+  display: flex;
+  height: 80%;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
 .main-header{
   font-size: 2rem;
   color: white;
@@ -49,10 +76,12 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 1.76rem;
-  color: aliceblue;
+  color: rgb(255, 255, 255);
   background-color: rgba(113, 53, 255, 0.995);
   border-radius: 25px;
 }
+
+
 
 .main {
   display: flex;
